# DebyeCalculator

./: .gitignore  .readthedocs.yaml  Benchmark.ipynb  CITATION.cff  DebyeCalculator - Introduction.ipynb  DebyeCalculator.py  DebyeCalculatorCPU.py  DebyeCalculatorGPU.py  Demo.ipynb  InteractiveMode_Colab.ipynb  JupyterTest.ipynb  NotebookTutorial.ipynb  QuickStart.ipynb  Quickstart.ipynb  README.md  Tutorial.ipynb  debye_calculator.py  demo.ipynb  demo_EPDIC18.ipynb  form_factor_coef.yaml  formfactor_coef.py  generate_nanoparticles.py  interact_upload_mockup.ipynb  profiling.py  pyproject.toml  requirements.txt  requirements1.txt  run_test.py  setup.py  test.py  test_notebook.ipynb  test_resonant.py
.github/workflows/: draft-pdf.yml  python-test.yml  tests.yml  unit-tests.yml
.ipynb_checkpoints/: JupyterTest-checkpoint.ipynb
DebyeCalculator/: debye_calculator.py  produce_figure_data.py  profiling.py  test_debye_calculator.py
DebyeCalculator/htmlcov/: __init___py.html  debye_calculator_py.html  index.html
DebyeCalculator/submodules/: SASCalculator.py  interact.py
DebyeCalculator/unittests_files/: icsd_001504_cc_r6_lc_2.85_6_tetragonal.xyz
data/: AntiFluorite_Co2O_r10.xyz
debyecalculator/: .coverage  __init__.py  debye_calculator.py  old_unit_tests.py  test_debye_calculator.py
debyecalculator/data/: ICSD_CollCode1504.cif  icsd_000001_cc.cif  icsd_000029_cc.cif  sim_Ag2O_cc_r4_lc_2.64_4_AntiFlourite.xyz
debyecalculator/htmlcov/: status.json  test_debye_calculator_py.html  utility___init___py.html  utility_profiling_py.html
debyecalculator/unittests_files/: icsd_001504_cc_r6_lc_2.85_6_tetragonal_Fq.dat:Zone.Identifier  icsd_001504_cc_r6_lc_2.85_6_tetragonal_Gr.dat:Zone.Identifier  icsd_001504_cc_r6_lc_2.85_6_tetragonal_Iq.dat:Zone.Identifier  icsd_001504_cc_r6_lc_2.85_6_tetragonal_Sq.dat:Zone.Identifier
debyecalculator/utility/: SASCalculator.py  __init__.py  benchmark.py  benchmark_reference_TITANRTX.csv  elements_info.yaml  elements_info_xrays.yaml  generate.py  profiling.py  timings_diffpy.csv
docs/: Equations.md  High_level_implementation_details.md  conf.py  debyecalculator.rst  index.rst  requirements.txt
docs/_build/doctrees/: debyecalculator.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  debyecalculator.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: debyecalculator.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: debyecalculator.rst.txt  index.rst.txt
example_data/: AntiFluorite_Co2O.cif
figures/: generate_figures.py
package/: form_factor_coef.yaml
paper/: paper.bib  paper.md
quickstart/: NotebookTutorial.ipynb  QuickStart.ipynb  Quickstart.ipynb  Tutorial.ipynb  debyecalculator_interaction.py
quickstart/tutorial_output/: timings_cpu.csv  timings_cuda_NVIDIA RTX A3000 Laptop GPU.csv  timings_diffpy.csv
runtime_tests/: produce_figure_data.py
runtime_tests/local_timings/: timings_cuda_NVIDIA RTX A3000 Laptop GPU.csv  timings_cuda_NVIDIA RTX A3000 Laptop GPU_bs100000.csv  timings_cuda_NVIDIA RTX A3000 Laptop GPU_bs20000.csv  timings_cuda_NVIDIA RTX A3000 Laptop GPU_bs30000.csv  timings_cuda_NVIDIA RTX A3000 Laptop GPU_bs40000.csv  timings_cuda_NVIDIA RTX A3000 Laptop GPU_bs50000.csv
runtime_tests/output_r40_rep10_cpu/: timings_cpu_bs1000.csv
runtime_tests/output_r40_rep10_titan/: timings_cuda_NVIDIA TITAN RTX_bs10000.csv
tests/: produce_figure_data.py
tests/output_r40_rep10_diffpy/: timings_diffpy.csv
