[tool.poetry]
name = "DebyeCalculator"
version = "1.0.1"
description = "A vectorized implementation of the Debye Equation on CPU and GPU"
license = "Apache-2.0"
authors = [
  "Frederik Lizak Johansen <frjo@di.ku.dk>",
  "Andy Sode Anker <andy@chem.ku.dk>",
]
readme = "README.md"
repository = "https://github.com/FrederikLizakJohansen/DebyeCalculator"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
packages = [
  {include = "debyecalculator"},
]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.26.0"
pyyaml = "^6.0.1"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
torch = "^2.0.1"
ase = "^3.22.1"
notebook = "6.1.5"
ipykernel = "6.15.2"
ipython = "7.31.1"
ipywidgets = "7.6.5"
jupyter = "1.0.0"
jupyter_client = "7.4.7"
jupyter_console = "6.4.4"
jupyter_core = "4.11.2"
jupyter_server = "1.18.1"
traitlets = "5.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
