[tool.poetry]
name = "DebyeCalculator"
version = "1.0.13"
description = "A vectorised implementation of the Debye Equation on CPU and GPU"
license = "Apache-2.0"
authors = [
  "Frederik Lizak Johansen <frjo@di.ku.dk>",
  "Andy Sode Anker <ansoan@dtu.dk>",
]
readme = "README.md"
repository = "https://github.com/FrederikLizakJohansen/DebyeCalculator"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
packages = [
  {include = "debyecalculator"},
]

[tool.poetry.dependencies]
python = "^3.7,<3.12"
numpy = [
  {version = "^1.21.5", python = "3.7"},
  {version = "^1.24.3", python = "3.8"},
  {version = "^1.26.0", python = "^3.9,<3.12"}
]
matplotlib = [
  {version = "^3.4.3", python = "^3.7,<3.9"},
  {version = "^3.8.0", python = "^3.9,<3.12"}
]
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
ase = "^3.22.1,<3.23.0"
pymatgen = [
  {version = ">=2020.0.0,<2024.9.10", python = "^3.10"}
]
notebook = "^6.4.1"
ipywidgets = "^8.0.3"
scipy = [
  {version = "1.7.3", python = "3.7"},
  {version = "^1.7.3", python = "^3.9,<3.12"}
]
prettytable = "3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
